decorations, footer fixed with z-index 105

--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -30,12 +30,15 @@ h1
 .the_margined_first
 	margin-top: 100px
 body
+	background-color: transparent
 	font-size: 16px
 	min-width: 320px
 	position: relative
 	line-height: 1.6
 	font-family: $default-font
 	overflow-x: hidden
+	z-index: -6
+
 
 .fixed_head
 	position: fixed
