--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -12,6 +12,7 @@ h1, h2, h3, h4
   margin: 5px 0px
 section.apple_features
   padding-top: 50px
+  background-color: $black_section_default
 a
   cursor: pointer
 .features
@@ -40,8 +41,9 @@ a
   &:nth-of-type(3), &:nth-of-type(4)
     top: 50%
 section.with_video
-	position: relative
-	text-align: center
+  position: relative
+  padding-bottom: 0
+  text-align: center
 video
 	position: relative
 	display: block
@@ -66,7 +68,9 @@ video
 		margin: 0 auto
 
 section.cocktail
-	text-align: center
+  padding-top: 50px
+  background-color: $black_section_default
+  text-align: center
 .advantages
 	text-align: left
 	list-style: none
@@ -85,6 +89,7 @@ img.cocktail-pic
 section.order
   text-align: center
   padding-bottom: 50px
+  background-color: $black_section_default
 .order_box
   border: 1px solid lighten($default_color, 80%)
   text-align: center
@@ -101,16 +106,21 @@ ul
 span.gray
   color: lighten($default_color, 70%)
 section.result
-  padding-bottom: 100px
+  padding-bottom: 0
+  background-color: $black_section_default
   img
     width: 100%
 .apple_features_wrapper
   position: relative
 .footer
+  position: fixed
+  z-index: -105
   background-color: $default_color
   color: $black_section_default
   padding: 20px 0
   min-height: 200px
+  bottom: 10px
+  width: 100%
 
 .results_container
   margin: auto
@@ -126,3 +136,6 @@ section.result
 
     .result_number
       font-size: $accent_huge
+section.transparent
+  min-height: 200px
+  background-color: transparent
